Add configurable daylight alarm scenes
