# src/huerise/features/daylight_alarm/infrastructure/provider.py
@@ -1,8 +1,11 @@
 from dishka import Provider, Scope, provide
 
 from huerise.configuration import YamlConfiguration
-from huerise.features.daylight_alarm.application import DaylightAlarm
-from huerise.features.lighting.application import HueClientFactory
+from huerise.features.daylight_alarm.application import (
+    DaylightAlarm,
+    DaylightAlarmConfiguration,
+)
+from huerise.features.lighting.application import HueClientFactory, SceneService
 from huerise.features.lighting.infrastructure import HueCredentialsProvider
 
 
@@ -17,3 +20,11 @@ class DaylightAlarmProvider(Provider):
         clients: HueClientFactory,
     ) -> DaylightAlarm:
         return DaylightAlarm(configuration, credentials, clients)
+
+    @provide
+    def configuration(
+        self,
+        configuration: YamlConfiguration,
+        scenes: SceneService,
+    ) -> DaylightAlarmConfiguration:
+        return DaylightAlarmConfiguration(configuration, scenes)
