# src/huerise/features/lighting/presentation/scene_router.py
@@ -5,33 +5,14 @@ from huerise.authentication import require_api_key
 from huerise.exception_handlers import ExceptionRouter
 from huerise.features.lighting.application import SceneService
 from huerise.features.lighting.presentation.errors import scene_errors
-from huerise.features.lighting.presentation.mappers import (
-    to_available_scene_response,
-    to_room_response,
-)
-from huerise.features.lighting.presentation.schemas import (
-    AvailableSceneResponse,
-    RoomResponse,
-)
+from huerise.features.lighting.presentation.mappers import to_available_scene_response
+from huerise.features.lighting.presentation.schemas import AvailableSceneResponse
 
 scene_router = ExceptionRouter(
     tags=["lighting"],
     route_class=DishkaRoute,
     dependencies=[Depends(require_api_key)],
 )
-
-
-@scene_router.get(
-    "/rooms",
-    response_model=list[RoomResponse],
-    operation_id="listRooms",
-    errors=scene_errors,
-)
-async def rooms(
-    service: FromDishka[SceneService],
-) -> list[RoomResponse]:
-    rooms = await service.list_rooms()
-    return [to_room_response(room) for room in rooms]
 
 
 @scene_router.get(
